--- a/Web.config
+++ b/Web.config
@@ -1,33 +1,33 @@
 ﻿<?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
+  <connectionStrings>
+    <add name="TableTop_DB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-    <connectionStrings>
-      <add name="TableTop_DB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Integrated Security=True"
-          providerName="System.Data.SqlClient" />
-    </connectionStrings>
-
-    <system.web>
-      <compilation debug="true" targetFramework="4.6.1" />
-      <httpRuntime targetFramework="4.6.1" />
-    </system.web>
-
-    <appSettings>
-      <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    </appSettings>
-
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
+  </system.web>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+  </appSettings>
   <system.webServer>
     <defaultDocument>
       <files>
-        <clear />
-        <add value="Default.aspx" />
+        <clear/>
+        <add value="Default.aspx"/>
       </files>
     </defaultDocument>
   </system.webServer>
-  
 </configuration>
